@@ -6,6 +6,9 @@
 	(info_search_previous): Work correctly when the match is an exact
 	number of screen-fulls away.
 
+	* info/window.c (window_new_screen_size): Try to resize windows
+	evenly.
+
 2014-08-26  Gavin Smith  <gavinsmith0123@gmail.com>
 
 	* info/m-x.c (info_execute_command): Free a string.  Allow arbitarily
